# api/swagger/file.yaml
@@ -65,6 +65,12 @@ paths:
                 type: number
                 x-omitempty: false
                 example: "121.000"
+              mediator_code:
+                type: string
+                description: > 
+                  Если нет прямого курса то конвертация будет произведена с помощью фиатного посредника
+                x-omitempty: true
+                enum: [ "EUR", "USD", "CNY"]
 definitions:
   Error:
     type: object
@@ -76,7 +82,4 @@ definitions:
         type: string
         description: текстовое описание ошибки
         example: "произошла такая-то ошибка"
-      code:
-        type: integer
-        description: цифровой код ошибки
-        example: 123
+
